- adding vertical-align: top to fix add-on alignment in Firefox

--- a/media/jui/less/bootstrap-extended.less
+++ b/media/jui/less/bootstrap-extended.less
@@ -428,3 +428,7 @@ fieldset.radio.btn-group {
 .input-prepend .chzn-container-single .chzn-drop{
 	border-color: #CCC;
 }
+.input-prepend > .add-on,
+.input-append > .add-on{
+	vertical-align: top;
+}
