--- a/templates/strapped/css/template.css
+++ b/templates/strapped/css/template.css
@@ -4871,6 +4871,10 @@ fieldset.radio.btn-group {
 .input-prepend .chzn-container-single .chzn-drop {
   border-color: #CCC;
 }
+.input-prepend > .add-on,
+.input-append > .add-on {
+  vertical-align: top;
+}
 @font-face {
   font-family: 'IcoMoon';
   src: url('../../../media/jui/fonts/IcoMoon.eot');
